--- a/players.html
+++ b/players.html
@@ -101,7 +101,7 @@
     <section class="page-header">
         <div class="container">
             <h1 class="page-title">選手評価</h1>
-            <p class="page-subtitle">Sランク選手の詳細評価とおすすめ育成方法</p>
+            <p class="page-subtitle">Sランク選手の詳細評価とおすすめ育成方法(助っ人外国人)</p>
         </div>
     </section>
 
@@ -187,19 +187,19 @@
                                     <div class="player-stats">
                                         <div class="stat-row">
                                             <span>ミート</span>
-                                            <span class="stat-value rank-a">A (86)</span>
+                                            <span class="stat-value rank-b">B (74)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>パワー</span>
-                                            <span class="stat-value rank-a">A (89)</span>
+                                            <span class="stat-value rank-b">B (71)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>走力</span>
-                                            <span class="stat-value rank-s">S (92)</span>
+                                            <span class="stat-value rank-b">B (72)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
-                                            <span class="stat-value rank-a">A (87)</span>
+                                            <span class="stat-value rank-a">---</span>
                                         </div>
                                     </div>
                                 </div>
@@ -213,34 +213,34 @@
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="小久保裕紀">
+                                    <img src="/placeholder.svg?height=150&width=250" alt="バウマン">
                                 </div>
                                 <div class="article-content">
-                                    <h3>小久保裕紀（Sランク）</h3>
-                                    <p>パワーA、守備力Bの内野手。称号「鉄人」でスタミナ強化がおすすめ。長打力に優れ、クリーンナップに最適な選手です。</p>
-                                    <p><strong>おすすめ育成：</strong>パワー特訓を優先し、ミート能力も向上させることで安定した打撃が期待できます。</p>
+                                    <h3>バウマン（覚醒　Sランク）</h3>
+                                    <p>バウアーが出ない代わりと言っていいほどの強さ。パワーカーブを持っていて、リアタイでは効果的。</p>
+                                    <p><strong>おすすめ配球：</strong>ツーシーム、高速シンカー、パワーカーブを投げ分けるととても効果的。</p>
                                 </div>
                             </article>
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="大島洋平">
+                                    <img src="/placeholder.svg?height=150&width=250" alt="ボスラー">
                                 </div>
                                 <div class="article-content">
-                                    <h3>大島洋平（Sランク）</h3>
-                                    <p>ミートAの外野手。特殊能力「チャンスメーカー」で1番打者に最適。出塁率が高く、チームの起点となる重要な選手です。</p>
-                                    <p><strong>おすすめ育成：</strong>走力を強化して盗塁成功率を上げ、より効果的な1番打者に育成しましょう。</p>
+                                    <h3>ボスラー（覚醒　Sランク）</h3>
+                                    <p>覚醒の外国人の中で、打撃で一番強い選手はこの人。高弾道で、守備・パワーもよく特殊能力も良い。今後に期待。</p>
+                                    <p><strong>おすすめ育成：</strong>極みにし、代打として出場させる（そうすると、満塁男などの特殊能力が出る）。</p>
                                 </div>
                             </article>
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="菅野智之">
+                                    <img src="/placeholder.svg?height=150&width=250" alt="キャベッジ">
                                 </div>
                                 <div class="article-content">
-                                    <h3>菅野智之（Sランク投手）</h3>
-                                    <p>制球力Sの右腕エース。安定した投球で相手打線を抑える頼れる先発投手。変化球の種類も豊富で対応力が高いです。</p>
-                                    <p><strong>おすすめ育成：</strong>スタミナを強化して完投能力を向上させ、チームの勝利に貢献できる投手に育成。</p>
+                                    <h3>キャベッジ（覚醒　Sランク投手）</h3>
+                                    <p>ゲーム内では、中弾道というイマイチな評価を受けてしまったが、今後の大強化を期待して取得しておくのも良い。</p>
+                                    <p><strong>おすすめ育成：</strong>極にして、通常選手として排出されたときに継承する。</p>
                                 </div>
                             </article>
                         </div>
@@ -254,16 +254,16 @@
                                 <h4>⚾ 投手ランキング</h4>
                                 <ul class="probability-list">
                                     <li>
-                                        <span>1位：菅野智之</span>
-                                        <span>制球力S</span>
+                                        <span>1位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                     <li>
-                                        <span>2位：大谷翔平</span>
-                                        <span>球速S</span>
+                                        <span>2位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                     <li>
-                                        <span>3位：千賀滉大</span>
-                                        <span>変化球S</span>
+                                        <span>3位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                 </ul>
                             </div>
@@ -272,16 +272,16 @@
                                 <h4>🥎 内野手ランキング</h4>
                                 <ul class="energy-list">
                                     <li>
-                                        <span>1位：村上宗隆</span>
-                                        <span>パワーS</span>
+                                        <span>1位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                     <li>
-                                        <span>2位：山田哲人</span>
-                                        <span>走力S</span>
+                                        <span>ー</span>
+                                        <span>ー</span>
                                     </li>
                                     <li>
-                                        <span>3位：小久保裕紀</span>
-                                        <span>パワーA</span>
+                                        <span>3位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                 </ul>
                             </div>
@@ -290,16 +290,16 @@
                                 <h4>🏃 外野手ランキング</h4>
                                 <ul class="bonus-list">
                                     <li>
-                                        <span>1位：柳田悠岐</span>
-                                        <span>総合力S</span>
+                                        <span>1位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                     <li>
-                                        <span>2位：大島洋平</span>
-                                        <span>ミートA</span>
+                                        <span>2位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                     <li>
-                                        <span>3位：近藤健介</span>
-                                        <span>バランス型</span>
+                                        <span>3位：ー</span>
+                                        <span>ー</span>
                                     </li>
                                 </ul>
                             </div>
