--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】プロスピセレクション廃止？助っ人外国人が登場。</h3>
+                                    <h3 class="news-title">【速報】プロスピセレクション廃止？助っ人外国人が登場!?</h3>
                                     <p class="news-excerpt">異例のスケジュール！？セレクション廃止疑惑があるものの、外国人助っ人登場！能力を詳しく解説します。</p>
-                                    <a href="gacha.html" class="section-link">記事を見る</a>
+                                    <a href="players.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年7月07日</span>
                                         <span class="news-category">イベント</span>
