--- a/players.html
+++ b/players.html
@@ -177,24 +177,24 @@
 
                             <div class="player-card">
                                 <div class="player-image">
-                                    <img src="/placeholder.svg?height=200&width=150" alt="山田哲人">
+                                    <img src="/placeholder.svg?height=200&width=150" alt="古林睿煬">
                                     <span class="player-rank rank-s">S</span>
                                 </div>
                                 <div class="player-info">
                                     <h3 class="player-name">古林睿煬</h3>
                                     <p class="player-team">日本ハム</p>
-                                    <p class="player-position">内野手</p>
+                                    <p class="player-position">投手</p>
                                     <div class="player-stats">
                                         <div class="stat-row">
-                                            <span>ミート</span>
+                                            <span>球威</span>
                                             <span class="stat-value rank-b">B (74)</span>
                                         </div>
                                         <div class="stat-row">
-                                            <span>パワー</span>
+                                            <span>制球</span>
                                             <span class="stat-value rank-b">B (71)</span>
                                         </div>
                                         <div class="stat-row">
-                                            <span>走力</span>
+                                            <span>スタミナ</span>
                                             <span class="stat-value rank-b">B (72)</span>
                                         </div>
                                         <div class="stat-row">
@@ -238,7 +238,7 @@
                                     <img src="/placeholder.svg?height=150&width=250" alt="キャベッジ">
                                 </div>
                                 <div class="article-content">
-                                    <h3>キャベッジ（覚醒　Sランク投手）</h3>
+                                    <h3>キャベッジ（覚醒　Sランク）</h3>
                                     <p>ゲーム内では、中弾道というイマイチな評価を受けてしまったが、今後の大強化を期待して取得しておくのも良い。</p>
                                     <p><strong>おすすめ育成：</strong>極にして、通常選手として排出されたときに継承する。</p>
                                 </div>
