--- a/hozon/hero.html
+++ b/hozon/hero.html
@@ -88,7 +88,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/placeholder.svg?height=300&width=800" alt="超合体プロスピヒーローズ">
+                            <img src="/picture/IN_ev055_06tupLww.jpg?height=300&width=800" alt="超合体プロスピヒーローズ">
                             <div class="gacha-info-overlay">
                                 <h3>超合体プロスピヒーローズ</h3>
                                 <p>5つのメカを合体させて怪人を倒せ！</p>
