--- a/hozon/hero.html
+++ b/hozon/hero.html
@@ -9,7 +9,7 @@
     <title>超合体プロスピヒーローズ攻略 - プロスピA攻略サイト</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <!-- Header -->
