--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】プロスピセレクション廃止？助っ人外国人が登場!?</h3>
-                                    <p class="news-excerpt">異例のスケジュール！？セレクション廃止疑惑があるものの、外国人助っ人登場！能力を詳しく解説します。</p>
+                                    <h3 class="news-title">【速報】プロスピヒーローズが到来！効率的なやり方は？</h3>
+                                    <p class="news-excerpt">セレクション廃止疑惑があるものの、プロスピヒーローズ登場！効率的なやり方を紹介します</p>
                                     <a href="players.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月07日</span>
+                                        <span class="news-date">2025年7月16日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
@@ -142,12 +142,12 @@
                                     <img src="/picture/korosiamu.jpg?height=200&width=400" alt="イベント攻略">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">イベント「プロスピコロシアム」開催！</h3>
-                                    <p class="news-excerpt">ランキングで一位になる秘訣をお伝えします</p>
+                                    <h3 class="news-title">TS第4弾登場！激アツ🔥</h3>
+                                    <p class="news-excerpt">神ラインナップ！？選手ごとの能力を詳しく解説します。</p>
                                     <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月07日</span>
-                                        <span class="news-category">ガチャ</span>
+                                        <span class="news-date">2025年7月16日</span>
+                                        <span class="news-category">選手評価</span>
                                     </div>
                                 </div>
                             </article>
