--- a/events.html
+++ b/events.html
@@ -6,6 +6,8 @@
     <meta name="description" content="プロスピAのイベント攻略情報を詳しく解説。効率的な進め方や報酬の獲得方法、最新イベント情報まで完全網羅。">
     <meta name="keywords" content="プロスピ,イベント,攻略,累計,コロシアム,プロスピコロシアム,効率">
     <meta name="referrer" content="no-referrer-when-downgrade" />
+    <!-- Temporary redirect to event-hero.html -->
+    <meta http-equiv="refresh" content="0;url=event-hero.html">
     <title>イベント攻略 - プロスピA攻略サイト</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -105,7 +107,7 @@
                                             <span>36試合目</span>
                                         </li>
                                         <li>
-                                            <span>Aランク助っ人外国人（選択契約書）</span></span>
+                                            <span>Aランク助っ人外国人（選択契約書）</span>
                                             <span>現時点では不明</span>
                                         </li>
                                         <li>
@@ -359,7 +361,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 プロスピA攻略サイト. All rights reserved.</p>
+                <p>© 2025 プロスピA攻略サイト. All rights reserved.</p>
                 <p><small>※このサイトは個人が運営するファンサイトです。公式とは一切関係ありません。</small></p>
             </div>
         </div>
