--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="news-grid">
                             <article class="news-card featured">
                                 <div class="news-image">
-                                    <img src="picture/IN_player_618watamE.jpg?height=200&width=400" alt="最新イベント情報">
+                                    <img src="/picture/TS4-2025.jpg?height=200&width=400" alt="最新イベント情報">
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
@@ -139,7 +139,7 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/korosiamu.jpg?height=200&width=400" alt="イベント攻略">
+                                    <img src="/picture/TS4-2025.jpg?height=200&width=400" alt="選手評価">
                                 </div>
                                 <div class="news-content">
                                     <h3 class="news-title">TS第4弾登場！激アツ🔥</h3>
