--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
 
                             <div class="form-group">
                                 <label for="email">メールアドレス <span class="required">*</span></label>
-                                <input type="email" id="email" name="email" required placeholder="example@email.com">
+                                <input type="email" id="email" name="email" required placeholder="6nen3kumivr.1.10@gmail.com">
                                 <small>返信が必要な場合は必ずご入力ください</small>
                             </div>
 
@@ -179,7 +179,7 @@
                                 <div class="tip-icon">📧</div>
                                 <h4>メール</h4>
                                 <p>直接メールでお問い合わせいただくことも可能です。</p>
-                                <p><strong>アドレス：</strong><a href="mailto:info@example.com">info@example.com</a></p>
+                                <p><strong>アドレス：</strong><a href="mailto:6nen3kumivr.1.10@gmail.com">6nen3kumivr.1.10@gmail.com</a></p>
                             </div>
 
                             <div class="tip-card">
@@ -200,7 +200,7 @@
                                 <div class="tip-icon">⏰</div>
                                 <h4>回答時間</h4>
                                 <p>お問い合わせへの回答は、通常1-3営業日以内に行います。</p>
-                                <p><strong>営業時間：</strong>平日 9:00-18:00</p>
+                                <p><strong>営業時間：</strong>休日 9:00-18:00</p>
                             </div>
                         </div>
                     </section>
