--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         }
     }
     </script>
+    <script
+    src="https://cdn.databuddy.cc/databuddy.js"
+    data-client-id="59vLg1TiDeh1bUi_d-xiA"
+    data-track-interactions="true"
+    data-enable-batching="true"
+    crossOrigin="anonymous"
+    async
+  ></script>
 </head>
 <body>
     <!-- Header -->
