--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
                         <div class="news-grid">
                             <article class="news-card featured">
                                 <div class="news-image">
-                                    <img src="/picture/IN_ev055_06tupLww.jpg?height=200&width=400" alt="最新イベント情報">
+                                    <img src="/picture/IN_ev009_03mnhLpa.jpeg?height=200&width=400" alt="最新イベント情報">
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】プロスピヒーローズが到来！効率的なやり方は？</h3>
-                                    <p class="news-excerpt">セレクション廃止疑惑があるものの、プロスピヒーローズ登場！効率的なやり方を紹介します</p>
+                                    <h3 class="news-title">【速報】連打の達人開催！効率的なやり方は？</h3>
+                                    <p class="news-excerpt">Sランク補助券がもらえる神イベント！無課金勢にもおすすめ！</p>
                                     <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月16日</span>
+                                        <span class="news-date">2025年7月22日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
@@ -150,11 +150,11 @@
                                     <img src="/picture/TS4-2025.jpg?height=200&width=400" alt="選手評価">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">TS第4弾登場！激アツ🔥</h3>
-                                    <p class="news-excerpt">神ラインナップ！？選手ごとの能力を詳しく解説します。</p>
+                                    <h3 class="news-title">スピリッツ4900の投手登場</h3>
+                                    <p class="news-excerpt">選手ごとの能力を詳しく解説します。(更新中です)</p>
                                     <a href="players.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月16日</span>
+                                        <span class="news-date">2025年7月22日</span>
                                         <span class="news-category">選手評価</span>
                                     </div>
                                 </div>
