--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="プロスピ,イベント,攻略,累計,コロシアム,プロスピコロシアム,効率">
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <!-- Temporary redirect to event-hero.html -->
-    <meta http-equiv="refresh" content="0;url=event-hero.html">
+    <meta http-equiv="refresh" content="0;url=event-renda.html">
     <title>イベント攻略 - プロスピA攻略サイト</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -92,7 +92,7 @@
                         <div class="gacha-banner">
                             <img src="/picture/korosiamu.jpg?height=300&width=800" alt="プロスピコロシアム">
                             <div class="gacha-info-overlay">
-                                <h3>プロスピコロシアム</h3>
+                                <h3>リダイレクト中</h3>
                                 <p>新しいイベント形式で豪華報酬をゲット！</p>
                             </div>
                         </div>
