--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】連打の達人開催！効率的なやり方は？</h3>
+                                    <h3 class="news-title">【速報】巧打の達人開催！効率的なやり方は？</h3>
                                     <p class="news-excerpt">Sランク補助券がもらえる神イベント！無課金勢にもおすすめ！</p>
                                     <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
