Update and rename sele-sokuhou to sele-sokuhou.html

--- a/sele-sokuhou.html
+++ b/sele-sokuhou.html
@@ -60,14 +60,14 @@
                 name: "？？？",
                 team: "？？？",
                 selectionType: "第1弾",
-                image: "https://purosupi-a.f5.si/picture/",
+                image: "https://purosupi-a.f5.si/picture/no-image.png/",
                 description: "？？？"
             },
             {
                 name: "？？？",
                 team: "？？？",
                 selectionType: "第1弾",
-                image: "https://purosupi-a.f5.si/picture/",
+                image: "https://purosupi-a.f5.si/picture/no-image.png/",
                 description: "？？？"
             }
             
