--- a/sele-sokuhou.html
+++ b/sele-sokuhou.html
@@ -21,7 +21,7 @@
     <main class="container mx-auto px-4 py-6">
         <!-- YouTube Live Stream -->
         <section class="mb-8">
-            <h2 class="text-xl md:text-2xl font-semibold mb-4">📺 ライブ配信</h2>
+            <h2 class="text-xl md:text-2xl font-semibold mb-4"> ライブ配信</h2>
             <div class="relative" style="padding-bottom: 56.25%;">
                 <iframe
                     class="absolute top-0 left-0 w-full h-full"
@@ -37,7 +37,7 @@
 
         <!-- Player List -->
         <section class="mb-8">
-            <h2 class="text-xl md:text-2xl font-semibold mb-4">⚾ 発表されたセレクション選手</h2>
+            <h2 class="text-xl md:text-2xl font-semibold mb-4">発表されたセレクション選手</h2>
             <div id="playerList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Players will be dynamically added here -->
             </div>
