--- a/sele-sokuhou.html
+++ b/sele-sokuhou.html
@@ -25,7 +25,7 @@
             <div class="relative" style="padding-bottom: 56.25%;">
                 <iframe
                     class="absolute top-0 left-0 w-full h-full"
-                    src="https://www.youtube.com/embed/live_stream?channel=UCehZf4kn7EZ3_1N6zQ1GQGw"
+                    src="https://www.youtube.com/watch?v=YTqml_AWv6M"
                     title="プロスピA 2025セレクション選手発表ライブ"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
