--- a/sele-sokuhou.html
+++ b/sele-sokuhou.html
@@ -23,14 +23,7 @@
         <section class="mb-8">
             <h2 class="text-xl md:text-2xl font-semibold mb-4">ライブ配信</h2>
             <div class="relative" style="padding-bottom: 56.25%;">
-                <iframe
-                    class="absolute top-0 left-0 w-full h-full"
-                    src="https://www.youtube.com/watch?v=YTqml_AWv6M"
-                    title="プロスピA 2025セレクション選手発表ライブ"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                ></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YTqml_AWv6M?si=pAZTFQXG6qxDSEqP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p class="mt-2 text-sm text-gray-600">公式YouTubeチャンネル「パワプロ・プロスピ公式」より。セレクション第1弾・第2弾の選手発表をリアルタイムでチェック！</p>
         </section>
