--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】巧打の達人開催！効率的なやり方は？</h3>
-                                    <p class="news-excerpt">Sランク補助券がもらえる神イベント！無課金勢にもおすすめ！</p>
+                                    <h3 class="news-title">【速報】セレクション開催決定！！！</h3>
+                                    <p class="news-excerpt">無料配布はなさそうだが、ラインナップは激アツ🔥</p>
                                     <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月22日</span>
-                                        <span class="news-category">イベント</span>
+                                        <span class="news-date">2025年7月24日</span>
+                                        <span class="news-category">選手評価</span>
                                     </div>
                                 </div>
                             </article>
@@ -150,11 +150,11 @@
                                     <img src="/picture/TS4-2025.jpg?height=200&width=400" alt="選手評価">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">スピリッツ4900の投手登場</h3>
+                                    <h3 class="news-title">スピリッツ5000のガチャ登場🔥</h3>
                                     <p class="news-excerpt">選手ごとの能力を詳しく解説します。(更新中です)</p>
                                     <a href="players.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月22日</span>
+                                        <span class="news-date">2025年7月24日</span>
                                         <span class="news-category">選手評価</span>
                                     </div>
                                 </div>
