--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="news-grid">
                             <article class="news-card featured">
                                 <div class="news-image">
-                                    <img src="/picture/IN_ev009_03mnhLpa.jpeg?height=200&width=400" alt="最新イベント情報">
+                                    <img src="/picture/Screenshot 2025-07-24 21:24:08.png?height=200&width=400" alt="最新イベント情報">
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
@@ -147,7 +147,7 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/TS4-2025.jpg?height=200&width=400" alt="選手評価">
+                                    <img src="/picture/Screenshot 2025-07-24 21:24:08.png?height=200&width=400" alt="選手評価">
                                 </div>
                                 <div class="news-content">
                                     <h3 class="news-title">スピリッツ5000のガチャ登場🔥</h3>
@@ -165,7 +165,7 @@
                             <div class="alert-icon">📢</div>
                             <div class="alert-content">
                                 <strong>重要なお知らせ</strong>
-                                <p>メンテナンス情報や緊急のお知らせはこちらに表示されます。</p>
+                                <p>7/25 13:00 - 14:59までメンテナンスを行う予定（プロスピA）</p>
                             </div>
                         </div>
                     </section>
