--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <div class="news-content">
                                     <h3 class="news-title">【速報】セレクション開催決定！！！</h3>
                                     <p class="news-excerpt">無料配布はなさそうだが、ラインナップは激アツ🔥</p>
-                                    <a href="events.html" class="section-link">記事を見る</a>
+                                    <a href="players.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年7月24日</span>
                                         <span class="news-category">選手評価</span>
