--- a/players.html
+++ b/players.html
@@ -101,7 +101,7 @@
     <section class="page-header">
         <div class="container">
             <h1 class="page-title">選手評価</h1>
-            <p class="page-subtitle">Sランク選手の詳細評価とおすすめ育成方法(助っ人外国人)</p>
+            <p class="page-subtitle">Sランク選手の詳細評価とおすすめ育成方法</p>
         </div>
     </section>
 
@@ -117,55 +117,25 @@
                         <div class="players-grid">
                             <div class="player-card">
                                 <div class="player-image">
-                                    <img src="/placeholder.svg?height=200&width=150" alt="バウマン">
+                                    <img src="/picture/sele/baua.jpg?height=200&width=150" alt="バウアー">
                                     <span class="player-rank rank-s">S</span>
                                 </div>
                                 <div class="player-info">
-                                    <h3 class="player-name">バウマン</h3>
-                                    <p class="player-team">ヤクルト</p>
-                                    <p class="player-position">投手</p>
-                                    <div class="player-stats">
-                                        <div class="stat-row">
-                                            <span>球威</span>
-                                            <span class="stat-value rank-b">B (71)</span>
-                                        </div>
-                                        <div class="stat-row">
-                                            <span>制球</span>
-                                            <span class="stat-value rank-c">C (55)</span>
-                                        </div>
-                                        <div class="stat-row">
-                                            <span>スタミナ</span>
-                                            <span class="stat-value rank-c">C (59)</span>
-                                        </div>
-                                        <div class="stat-row">
-                                            <span>守備</span>
-                                            <span class="stat-value rank-a">---</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="player-card">
-                                <div class="player-image">
-                                    <img src="/placeholder.svg?height=200&width=150" alt="ディアス">
-                                    <span class="player-rank rank-s">S</span>
-                                </div>
-                                <div class="player-info">
-                                    <h3 class="player-name">ディアス</h3>
+                                    <h3 class="player-name">バウアー</h3>
                                     <p class="player-team">ベイスターズ</p>
                                     <p class="player-position">投手</p>
                                     <div class="player-stats">
                                         <div class="stat-row">
                                             <span>球威</span>
-                                            <span class="stat-value rank-c">C (68)</span>
+                                            <span class="stat-value rank-b">B (78)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>制球</span>
-                                            <span class="stat-value rank-d">D (55)</span>
+                                            <span class="stat-value rank-b">B (77)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>スタミナ</span>
-                                            <span class="stat-value rank-d">D (58)</span>
+                                            <span class="stat-value rank-a">A (81)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
@@ -177,29 +147,59 @@
 
                             <div class="player-card">
                                 <div class="player-image">
-                                    <img src="/placeholder.svg?height=200&width=150" alt="古林睿煬">
+                                    <img src="/picture/sele/raideru.jpg?height=200&width=150" alt="R・マルティネス">
                                     <span class="player-rank rank-s">S</span>
                                 </div>
                                 <div class="player-info">
-                                    <h3 class="player-name">古林睿煬</h3>
-                                    <p class="player-team">日本ハム</p>
+                                    <h3 class="player-name">R・マルティネス</h3>
+                                    <p class="player-team">巨人</p>
                                     <p class="player-position">投手</p>
                                     <div class="player-stats">
                                         <div class="stat-row">
                                             <span>球威</span>
-                                            <span class="stat-value rank-b">B (74)</span>
+                                            <span class="stat-value rank-a">A (86)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>制球</span>
-                                            <span class="stat-value rank-b">B (71)</span>
+                                            <span class="stat-value rank-a">A (82)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>スタミナ</span>
-                                            <span class="stat-value rank-b">B (72)</span>
+                                            <span class="stat-value rank-c">C (65)</span>
                                         </div>
                                         <div class="stat-row">
                                             <span>守備</span>
                                             <span class="stat-value rank-a">---</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="player-card">
+                                <div class="player-image">
+                                    <img src="/picture/sele/mannnami.jpg?height=200&width=150" alt="万波中正">
+                                    <span class="player-rank rank-s">S</span>
+                                </div>
+                                <div class="player-info">
+                                    <h3 class="player-name">万波中正</h3>
+                                    <p class="player-team">日本ハム</p>
+                                    <p class="player-position">ライト</p>
+                                    <div class="player-stats">
+                                        <div class="stat-row">
+                                            <span>ミート</span>
+                                            <span class="stat-value rank-b">B (71)</span>
+                                        </div>
+                                        <div class="stat-row">
+                                            <span>パワー</span>
+                                            <span class="stat-value rank-b">B (79)</span>
+                                        </div>
+                                        <div class="stat-row">
+                                            <span>総力</span>
+                                            <span class="stat-value rank-b">B (72)</span>
+                                        </div>
+                                        <div class="stat-row">
+                                            <span>守備</span>
+                                            <span class="stat-value rank-b">B</span>
                                         </div>
                                     </div>
                                 </div>
@@ -209,38 +209,38 @@
 
                     <!-- Player Reviews -->
                     <section class="section player-reviews">
-                        <h2 class="section-title">📝 選手レビュー</h2>
+                        <h2 class="section-title"> 選手レビュー</h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="バウマン">
+                                    <img src="/picture/sele/baua.jpg?height=150&width=250" alt="バウアー">
                                 </div>
                                 <div class="article-content">
-                                    <h3>バウマン（覚醒　Sランク）</h3>
-                                    <p>バウアーが出ない代わりと言っていいほどの強さ。パワーカーブを持っていて、リアタイでは効果的。</p>
+                                    <h3>バウアー</h3>
+                                    <p>パワーカーブを持っているリアタイ最強格のピッチャー。12球団でもスタメン入りレベル。</p>
                                     <p><strong>おすすめ配球：</strong>ツーシーム、高速シンカー、パワーカーブを投げ分けるととても効果的。</p>
                                 </div>
                             </article>
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="ボスラー">
+                                    <img src="/picture/sele/raideru.jpg?height=150&width=250" alt="R・マルティネス">
                                 </div>
                                 <div class="article-content">
-                                    <h3>ボスラー（覚醒　Sランク）</h3>
-                                    <p>覚醒の外国人の中で、打撃で一番強い選手はこの人。高弾道で、守備・パワーもよく特殊能力も良い。今後に期待。</p>
-                                    <p><strong>おすすめ育成：</strong>極みにし、代打として出場させる（そうすると、満塁男などの特殊能力が出る）。</p>
+                                    <h3>R・マルティネス</h3>
+                                    <p>通常でも最強の中継ぎ・抑えとして使われてきた。セレクションでもこれといった大きな変更点がないので、リアタイで活躍できるのは間違いなし。</p>
+                                    <p><strong>おすすめ配球：</strong>ツーシーム、スプリットの投げ分け</p>
                                 </div>
                             </article>
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="キャベッジ">
+                                    <img src="/picture/sele/mannnami.jpg?height=150&width=250" alt="万波中正">
                                 </div>
                                 <div class="article-content">
-                                    <h3>キャベッジ（覚醒　Sランク）</h3>
-                                    <p>ゲーム内では、中弾道というイマイチな評価を受けてしまったが、今後の大強化を期待して取得しておくのも良い。</p>
-                                    <p><strong>おすすめ育成：</strong>極にして、通常選手として排出されたときに継承する。</p>
+                                    <h3>万波中正</h3>
+                                    <p>ライトB、ミート・パワー・走力がBとライトの最強選手の一人に入る。広角打法、フルスイングを持っているので打ちやすい。</p>
+                                    
                                 </div>
                             </article>
                         </div>
@@ -254,16 +254,16 @@
                                 <h4>⚾ 投手ランキング</h4>
                                 <ul class="probability-list">
                                     <li>
-                                        <span>1位：ー</span>
-                                        <span>ー</span>
+                                        <span>1位：バウアー</span>
+                                        <span>パワーカーブ、等々が強い。一年ぶりの登場</span>
                                     </li>
                                     <li>
-                                        <span>2位：ー</span>
-                                        <span>ー</span>
+                                        <span>2位：R・マルティネス</span>
+                                        <span>抑え、中継ぎ最強格</span>
                                     </li>
                                     <li>
-                                        <span>3位：ー</span>
-                                        <span>ー</span>
+                                        <span>3位：モイネロ</span>
+                                        <span>全球種が、B以上の変化。タイピンチも兼ね揃えている。</span>
                                     </li>
                                 </ul>
                             </div>
@@ -272,12 +272,12 @@
                                 <h4>🥎 内野手ランキング</h4>
                                 <ul class="energy-list">
                                     <li>
-                                        <span>1位：ー</span>
-                                        <span>ー</span>
+                                        <span>1位：佐藤輝明</span>
+                                        <span>アーチストにはならなかったものの、広角フルスイングを持っている最強。</span>
                                     </li>
                                     <li>
-                                        <span>ー</span>
-                                        <span>ー</span>
+                                        <span>2位：太田椋</span>
+                                        <span>広角打法持ち。現実では活躍を見せているので、今後の強化を期待したい。</span>
                                     </li>
                                     <li>
                                         <span>3位：ー</span>
@@ -290,16 +290,16 @@
                                 <h4>🏃 外野手ランキング</h4>
                                 <ul class="bonus-list">
                                     <li>
-                                        <span>1位：ー</span>
-                                        <span>ー</span>
+                                        <span>1位：万波中正</span>
+                                        <span>すべてのステータスがバランス良く、広角フルスイング持ち。</span>
                                     </li>
                                     <li>
-                                        <span>2位：ー</span>
-                                        <span>ー</span>
+                                        <span>2位：ファビアン</span>
+                                        <span>ラインドライブでの登場。ステータスは程よい。</span>
                                     </li>
                                     <li>
-                                        <span>3位：ー</span>
-                                        <span>ー</span>
+                                        <span>3位：サンタナ</span>
+                                        <span>守備力が不安。ステータスは良いので、DHなどで使用すると良い。</span>
                                     </li>
                                 </ul>
                             </div>
