--- a/event-homerun.html
+++ b/event-homerun.html
@@ -160,7 +160,7 @@
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="ライバル対戦">
+                                    <img src="/picture/IMG_6894.jpeg?height=150&width=250" alt="ライバル対戦">
                                 </div>
                                 <div class="article-content">
                                     <h3>⚾ ライバル対戦</h3>
