--- a/event-homerun.html
+++ b/event-homerun.html
@@ -174,7 +174,7 @@
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="ビッグチャンス">
+                                    <img src="/picture/IMG_6896.jpeg?height=150&width=250" alt="ビッグチャンス">
                                 </div>
                                 <div class="article-content">
                                     <h3>🌟 ビッグチャンス</h3>
