--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/Screenshot 2025-07-24 21:24:08.png?height=200&width=400" alt="選手評価">
+                                    <img src="/picture/IN_ev044_01ydkr.jpeg?height=200&width=400" alt="選手評価">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">スピリッツ5000のガチャ登場🔥</h3>
-                                    <p class="news-excerpt">選手ごとの能力を詳しく解説します。(更新中です)</p>
+                                    <h3 class="news-title">ホームランダービー開催中！！</h3>
+                                    <p class="news-excerpt">セレクション開催の中、ホームランダービーの攻略法を解説します。</p>
                                     <a href="players.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月24日</span>
-                                        <span class="news-category">選手評価</span>
+                                        <span class="news-date">2025年7月27日</span>
+                                        <span class="news-category">イベント</span>
                                     </div>
                                 </div>
                             </article>
@@ -165,7 +165,7 @@
                             <div class="alert-icon">📢</div>
                             <div class="alert-content">
                                 <strong>重要なお知らせ</strong>
-                                <p>7/25 13:00 - 14:59までメンテナンスを行う予定（プロスピA）</p>
+                                
                             </div>
                         </div>
                     </section>
