--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <div class="news-content">
                                     <h3 class="news-title">ホームランダービー開催中！！</h3>
                                     <p class="news-excerpt">セレクション開催の中、ホームランダービーの攻略法を解説します。</p>
-                                    <a href="players.html" class="section-link">記事を見る</a>
+                                    <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年7月27日</span>
                                         <span class="news-category">イベント</span>
