--- a/event-homerun.html
+++ b/event-homerun.html
@@ -89,7 +89,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/IN_ev044_01ydkr.jpg?height=300&width=800" alt="ホームランダービーライバルズ">
+                            <img src="/picture/IN_ev044_01ydkr.jpeg?height=300&width=800" alt="ホームランダービーライバルズ">
                             <div class="gacha-info-overlay">
                                 <h3>ホームランダービーライバルズ</h3>
                                 <p>7球勝負でライバル投手を打ち負かせ！</p>
